WiP: use dasharo kgpe-d16 fork + add nvme support in all associated linux configs - coreboot kgpe-d16: WiP attempt to fix ISAL url with patch and coreboot failing crossgcc build with EXTRA_PARAMS overriden in - CircleCI: fix names for kgpe-d16: they are part of UNTESTED boards as of now

--- a/boards/UNTESTED_kgpe-d16_server-whiptail/UNTESTED_kgpe-d16_server-whiptail.config
+++ b/boards/UNTESTED_kgpe-d16_server-whiptail/UNTESTED_kgpe-d16_server-whiptail.config
@@ -18,7 +18,7 @@
 #   sure their operating system loads microcode updates.
 
 export CONFIG_COREBOOT=y
-export CONFIG_COREBOOT_VERSION=4.11
+export CONFIG_COREBOOT_VERSION=dasharo-kgpe-d16
 export CONFIG_LINUX_VERSION=5.10.5
 
 CONFIG_COREBOOT_CONFIG=config/coreboot-kgpe-d16_server-whiptail.config
@@ -57,11 +57,10 @@ export CONFIG_BOOTSCRIPT=/bin/gui-init
 
 #CONSOLE SELECTION
 #Single output to OpenBMC
-export CONFIG_BOOT_KERNEL_ADD="nohz=on console=ttyS1,115200n8 "
+#export CONFIG_BOOT_KERNEL_ADD="nohz=on console=ttyS1,115200n8 "
 
 #Dual output to local console (tty0) and OpenBmc (ttyS1)
-#export CONFIG_BOOT_KERNEL_ADD="nohz=on console=ttyS1,115200n8 console=tty0"
-
+export CONFIG_BOOT_KERNEL_ADD="nohz=on console=ttyS1,115200n8 console=tty0"
 #Single output to tty0
 #export CONFIG_BOOT_KERNEL_ADD="nohz=on"
 export CONFIG_BOOT_RECOVERY_SERIAL="/dev/ttyS0"
