--- a/config/linux-kgpe-d16_workstation.config
+++ b/config/linux-kgpe-d16_workstation.config
@@ -957,8 +957,12 @@ CONFIG_BLK_DEV_RAM_SIZE=65536
 #
 # NVME Support
 #
-# CONFIG_BLK_DEV_NVME is not set
+CONFIG_NVME_CORE=y
+CONFIG_BLK_DEV_NVME=y
+# CONFIG_NVME_MULTIPATH is not set
+# CONFIG_NVME_HWMON is not set
 # CONFIG_NVME_FC is not set
+# CONFIG_NVME_TCP is not set
 # end of NVME Support
 
 #
