--- a/boards/UNTESTED_kgpe-d16_server/UNTESTED_kgpe-d16_server.config
+++ b/boards/UNTESTED_kgpe-d16_server/UNTESTED_kgpe-d16_server.config
@@ -16,7 +16,7 @@
 # - Please contribute documentation on heads-wiki
 # - Please support https://github.com/osresearch/heads/issues/719
 export CONFIG_COREBOOT=y
-export CONFIG_COREBOOT_VERSION=4.11
+export CONFIG_COREBOOT_VERSION=dasharo-kgpe-d16
 export CONFIG_LINUX_VERSION=5.10.5
 
 CONFIG_COREBOOT_CONFIG=config/coreboot-kgpe-d16_server.config
@@ -36,6 +36,13 @@ CONFIG_QRENCODE=y
 CONFIG_TPMTOTP=y
 CONFIG_DROPBEAR=y
 
+#Whiptail
+#CONFIG_SLANG=y
+#CONFIG_NEWT=y
+#FBWhiptail
+#CONFIG_CAIRO=y
+#CONFIG_FBWHIPTAIL=y
+
 CONFIG_LINUX_USB=y
 CONFIG_LINUX_E1000E=y
 export CONFIG_LINUX_USB_COMPANION_CONTROLLER=y
@@ -43,6 +50,7 @@ export CONFIG_LINUX_USB_COMPANION_CONTROLLER=y
 export CONFIG_TPM=y
 #BOOT SCRIPT SELECTION
 export CONFIG_BOOTSCRIPT=/bin/generic-init
+#export CONFIG_BOOTSCRIPT=/bin/gui-init
 #export CONFIG_BOOTSCRIPT_NETWORK=/bin/network-init-recovery
 
 #CONSOLE SELECTION
@@ -50,6 +58,8 @@ export CONFIG_BOOTSCRIPT=/bin/generic-init
 #export CONFIG_BOOT_KERNEL_ADD="nohz=on console=ttyS1,115200n8 "
 #Dual output to local console (tty0) and OpenBmc (ttyS1)
 export CONFIG_BOOT_KERNEL_ADD="nohz=on console=ttyS1,115200n8 console=tty0"
+#Single output to tty0
+#export CONFIG_BOOT_KERNEL_ADD="nohz=on"
 export CONFIG_BOOT_RECOVERY_SERIAL="/dev/ttyS0"
 export CONFIG_BOOT_STATIC_IP=192.168.2.3
 
