--- a/boards/UNTESTED_kgpe-d16_workstation-usb_keyboard/UNTESTED_kgpe-d16_workstation-usb_keyboard.config
+++ b/boards/UNTESTED_kgpe-d16_workstation-usb_keyboard/UNTESTED_kgpe-d16_workstation-usb_keyboard.config
@@ -12,7 +12,7 @@
 #   sure their operating system loads microcode updates.
 
 export CONFIG_COREBOOT=y
-export CONFIG_COREBOOT_VERSION=4.11
+export CONFIG_COREBOOT_VERSION=dasharo-kgpe-d16
 export CONFIG_LINUX_VERSION=5.10.5
 
 CONFIG_COREBOOT_CONFIG=config/coreboot-kgpe-d16_workstation-usb_keyboard.config
