--- a/boards/UNTESTED_kgpe-d16_workstation/UNTESTED_kgpe-d16_workstation.config
+++ b/boards/UNTESTED_kgpe-d16_workstation/UNTESTED_kgpe-d16_workstation.config
@@ -16,7 +16,7 @@
 
 
 export CONFIG_COREBOOT=y
-export CONFIG_COREBOOT_VERSION=4.11
+export CONFIG_COREBOOT_VERSION=dasharo-kgpe-d16
 export CONFIG_LINUX_VERSION=5.10.5
 
 CONFIG_COREBOOT_CONFIG=config/coreboot-kgpe-d16_workstation.config
