WiP: Efi_Vars are still picking up. only linuboot enables it.
Problem:
Xen can use EFI path if kexec can parse needed information from /sys to be "efi".
As of now, efifb was passwed from kexec because EfiFB alone was seen.
Now we need to have things a little bit more clear otherwise coreboot->Heads->Xen->Kernel looses EFI properties before Xen

--- a/config/linux-x230-maximized.config
+++ b/config/linux-x230-maximized.config
@@ -118,7 +118,8 @@ CONFIG_RCU_NEED_SEGCBLIST=y
 # end of RCU Subsystem
 
 CONFIG_BUILD_BIN2C=y
-# CONFIG_IKCONFIG is not set
+CONFIG_IKCONFIG=y
+CONFIG_IKCONFIG_PROC=y
 # CONFIG_IKHEADERS is not set
 CONFIG_LOG_BUF_SHIFT=18
 CONFIG_LOG_CPU_MAX_BUF_SHIFT=12
@@ -488,9 +489,9 @@ CONFIG_ISA_DMA_API=y
 # Firmware Drivers
 #
 # CONFIG_EDD is not set
-# CONFIG_FIRMWARE_MEMMAP is not set
+CONFIG_FIRMWARE_MEMMAP=y
 # CONFIG_DMIID is not set
-# CONFIG_DMI_SYSFS is not set
+CONFIG_DMI_SYSFS=y
 CONFIG_DMI_SCAN_MACHINE_NON_EFI_FALLBACK=y
 # CONFIG_FW_CFG_SYSFS is not set
 CONFIG_GOOGLE_FIRMWARE=y
@@ -504,10 +505,11 @@ CONFIG_GOOGLE_MEMCONSOLE_COREBOOT=y
 #
 # EFI (Extensible Firmware Interface) Support
 #
-# CONFIG_EFI_VARS is not set
+CONFIG_EFI_VARS=y
 CONFIG_EFI_ESRT=y
 CONFIG_EFI_RUNTIME_MAP=y
-# CONFIG_EFI_FAKE_MEMMAP is not set
+CONFIG_EFI_FAKE_MEMMAP=y
+CONFIG_EFI_MAX_FAKE_MEM=8
 CONFIG_EFI_RUNTIME_WRAPPERS=y
 # CONFIG_EFI_BOOTLOADER_CONTROL is not set
 # CONFIG_EFI_CAPSULE_LOADER is not set
@@ -2472,7 +2474,7 @@ CONFIG_TMPFS=y
 CONFIG_MEMFD_CREATE=y
 CONFIG_ARCH_HAS_GIGANTIC_PAGE=y
 # CONFIG_CONFIGFS_FS is not set
-CONFIG_EFIVAR_FS=m
+CONFIG_EFIVAR_FS=y
 # end of Pseudo filesystems
 
 # CONFIG_MISC_FILESYSTEMS is not set
