--- a/config/coreboot-x230-legacy-flash.config
+++ b/config/coreboot-x230-legacy-flash.config
@@ -33,7 +33,7 @@ CONFIG_HAVE_ASAN_IN_RAMSTAGE=y
 CONFIG_TSEG_STAGE_CACHE=y
 # CONFIG_UPDATE_IMAGE is not set
 CONFIG_BOOTSPLASH_IMAGE=y
-CONFIG_BOOTSPLASH_FILE="@BLOB_DIR@/bootsplash-1024x768.jpg"
+CONFIG_BOOTSPLASH_FILE="@BRAND_DIR@/bootsplash-1024x768.jpg"
 CONFIG_FW_CONFIG=y
 CONFIG_FW_CONFIG_SOURCE_CBFS=y
 
