--- a/config/linux-c216.config
+++ b/config/linux-c216.config
@@ -1459,7 +1459,7 @@ CONFIG_TCG_TIS=y
 # CONFIG_XILLYBUS is not set
 # end of Character devices
 
-# CONFIG_RANDOM_TRUST_CPU is not set
+CONFIG_RANDOM_TRUST_CPU=y
 # CONFIG_RANDOM_TRUST_BOOTLOADER is not set
 
 #
