all kernel-configs: enable CONFIG_WARN_ALL_UNSEEDED_RANDOM=y to have warnings on each unseeded random read

--- a/config/linux-nitropad-x.config
+++ b/config/linux-nitropad-x.config
@@ -3372,7 +3372,7 @@ CONFIG_LOCK_DEBUGGING_SUPPORT=y
 
 # CONFIG_DEBUG_IRQFLAGS is not set
 # CONFIG_STACKTRACE is not set
-# CONFIG_WARN_ALL_UNSEEDED_RANDOM is not set
+CONFIG_WARN_ALL_UNSEEDED_RANDOM=y
 # CONFIG_DEBUG_KOBJECT is not set
 
 #
