linux configs: set CONFIG_RANDOM_TRUST_CPU=y for all boards

--- a/config/linux-librem_common-6.1.8.config
+++ b/config/linux-librem_common-6.1.8.config
@@ -156,7 +156,7 @@ CONFIG_HW_RANDOM_AMD=m
 CONFIG_HW_RANDOM_VIA=m
 CONFIG_TCG_TPM=y
 CONFIG_TCG_TIS=y
-# CONFIG_RANDOM_TRUST_CPU is not set
+CONFIG_RANDOM_TRUST_CPU=y
 # CONFIG_RANDOM_TRUST_BOOTLOADER is not set
 # CONFIG_HWMON is not set
 # CONFIG_X86_PKG_TEMP_THERMAL is not set
