--- a/config/linux-talos-2.config
+++ b/config/linux-talos-2.config
@@ -1493,7 +1493,7 @@ CONFIG_DEVPORT=y
 # CONFIG_XILLYBUS is not set
 # end of Character devices
 
-# CONFIG_RANDOM_TRUST_CPU is not set
+CONFIG_RANDOM_TRUST_CPU=y
 # CONFIG_RANDOM_TRUST_BOOTLOADER is not set
 
 #
