--- a/config/busybox.config
+++ b/config/busybox.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Busybox version: 1.36.1
-# Fri Jul 21 14:38:54 2023
+# Thu Oct  5 11:19:09 2023
 #
 CONFIG_HAVE_DOT_CONFIG=y
 
@@ -34,8 +34,8 @@ CONFIG_FEATURE_SUID_CONFIG_QUIET=y
 CONFIG_BUSYBOX_EXEC_PATH="/proc/self/exe"
 # CONFIG_SELINUX is not set
 # CONFIG_FEATURE_CLEAN_UP is not set
-# CONFIG_FEATURE_SYSLOG_INFO is not set
-# CONFIG_FEATURE_SYSLOG is not set
+CONFIG_FEATURE_SYSLOG_INFO=y
+CONFIG_FEATURE_SYSLOG=y
 
 #
 # Build Options
@@ -1208,7 +1208,7 @@ CONFIG_FEATURE_SH_EMBEDDED_SCRIPTS=y
 #
 # CONFIG_KLOGD is not set
 # CONFIG_FEATURE_KLOGD_KLOGCTL is not set
-# CONFIG_LOGGER is not set
+CONFIG_LOGGER=y
 # CONFIG_LOGREAD is not set
 # CONFIG_FEATURE_LOGREAD_REDUCED_LOCKING is not set
 # CONFIG_SYSLOGD is not set
