To squash: remove CONFIG_WARN_ALL_UNSEEDED_RANDOM=y, add CONFIG_RANDOM_TRUST_CPU=y, add +CONFIG_UNIX98_PTYS=y

--- a/config/linux-librem_common-6.1.8.config
+++ b/config/linux-librem_common-6.1.8.config
@@ -277,7 +277,7 @@ CONFIG_HARDLOCKUP_DETECTOR=y
 CONFIG_WQ_WATCHDOG=y
 # CONFIG_SCHED_DEBUG is not set
 CONFIG_STACKTRACE=y
-CONFIG_WARN_ALL_UNSEEDED_RANDOM=y
+# CONFIG_WARN_ALL_UNSEEDED_RANDOM is not set
 # CONFIG_RCU_TRACE is not set
 # CONFIG_FTRACE is not set
 # CONFIG_STRICT_DEVMEM is not set
