coreboot configs: unify kernel command argument to be all quiet loglevel=2 or quiet loglevel=3

--- a/config/coreboot-t530-dgpu-maximized.config
+++ b/config/coreboot-t530-dgpu-maximized.config
@@ -208,7 +208,7 @@ CONFIG_PRE_GRAPHICS_DELAY_MS=0
 CONFIG_HEAP_SIZE=0x4000
 CONFIG_EC_GPE_SCI=0x50
 CONFIG_TPM_MEASURED_BOOT=y
-CONFIG_LINUX_COMMAND_LINE="intel_iommu=igfx_off quiet"
+CONFIG_LINUX_COMMAND_LINE="intel_iommu=igfx_off quiet loglevel=2"
 CONFIG_BOARD_ROMSIZE_KB_12288=y
 # CONFIG_COREBOOT_ROMSIZE_KB_256 is not set
 # CONFIG_COREBOOT_ROMSIZE_KB_512 is not set
