--- a/config/busybox.config
+++ b/config/busybox.config
@@ -368,7 +368,7 @@ CONFIG_FEATURE_WC_LARGE=y
 # Console Utilities
 #
 # CONFIG_CHVT is not set
-# CONFIG_CLEAR is not set
+CONFIG_CLEAR=y
 # CONFIG_DEALLOCVT is not set
 # CONFIG_DUMPKMAP is not set
 # CONFIG_FGCONSOLE is not set
@@ -381,7 +381,7 @@ CONFIG_DEFAULT_SETFONT_DIR=""
 # CONFIG_FEATURE_LOADFONT_RAW is not set
 CONFIG_LOADKMAP=y
 # CONFIG_OPENVT is not set
-# CONFIG_RESET is not set
+CONFIG_RESET=y
 # CONFIG_RESIZE is not set
 # CONFIG_FEATURE_RESIZE_PRINT is not set
 # CONFIG_SETCONSOLE is not set
@@ -1151,7 +1151,7 @@ CONFIG_ASH_SLEEP=y
 CONFIG_ASH_HELP=y
 CONFIG_ASH_GETOPTS=y
 CONFIG_ASH_CMDCMD=y
-# CONFIG_CTTYHACK is not set
+CONFIG_CTTYHACK=y
 # CONFIG_HUSH is not set
 # CONFIG_SHELL_HUSH is not set
 # CONFIG_HUSH_BASH_COMPAT is not set
