To squash: remove unneeded logger additions in busybox since dmesg -n 8 is forced under init when DEBUG is enforced through config

--- a/config/busybox.config
+++ b/config/busybox.config
@@ -34,8 +34,8 @@ CONFIG_FEATURE_SUID_CONFIG_QUIET=y
 CONFIG_BUSYBOX_EXEC_PATH="/proc/self/exe"
 # CONFIG_SELINUX is not set
 # CONFIG_FEATURE_CLEAN_UP is not set
-CONFIG_FEATURE_SYSLOG_INFO=y
-CONFIG_FEATURE_SYSLOG=y
+# CONFIG_FEATURE_SYSLOG_INFO is not set
+# CONFIG_FEATURE_SYSLOG is not set
 
 #
 # Build Options
@@ -1208,7 +1208,7 @@ CONFIG_FEATURE_SH_EMBEDDED_SCRIPTS=y
 #
 # CONFIG_KLOGD is not set
 # CONFIG_FEATURE_KLOGD_KLOGCTL is not set
-CONFIG_LOGGER=y
+# CONFIG_LOGGER is not set
 # CONFIG_LOGREAD is not set
 # CONFIG_FEATURE_LOGREAD_REDUCED_LOCKING is not set
 # CONFIG_SYSLOGD is not set
