--- a/config/linux-qemu.config
+++ b/config/linux-qemu.config
@@ -2559,7 +2559,7 @@ CONFIG_EXFAT_DEFAULT_IOCHARSET="utf8"
 #
 CONFIG_PROC_FS=y
 # CONFIG_PROC_KCORE is not set
-
+# CONFIG_PROC_SYSCTL is not set
 # CONFIG_PROC_PAGE_MONITOR is not set
 # CONFIG_PROC_CHILDREN is not set
 CONFIG_PROC_PID_ARCH_STATUS=y
@@ -3201,7 +3201,6 @@ CONFIG_RUNTIME_TESTING_MENU=y
 # CONFIG_TEST_BLACKHOLE_DEV is not set
 # CONFIG_FIND_BIT_BENCHMARK is not set
 # CONFIG_TEST_FIRMWARE is not set
-# CONFIG_TEST_SYSCTL is not set
 # CONFIG_TEST_UDELAY is not set
 # CONFIG_TEST_STATIC_KEYS is not set
 # CONFIG_TEST_KMOD is not set
