--- a/config/linux-t440p.config
+++ b/config/linux-t440p.config
@@ -2475,7 +2475,7 @@ CONFIG_EXFAT_DEFAULT_IOCHARSET="utf8"
 #
 CONFIG_PROC_FS=y
 # CONFIG_PROC_KCORE is not set
-
+# CONFIG_PROC_SYSCTL is not set
 # CONFIG_PROC_PAGE_MONITOR is not set
 # CONFIG_PROC_CHILDREN is not set
 CONFIG_PROC_PID_ARCH_STATUS=y
