--- a/boards/UNTESTED_w530-dgpu-K1000m-maximized/UNTESTED_w530-dgpu-K1000m-maximized.config
+++ b/boards/UNTESTED_w530-dgpu-K1000m-maximized/UNTESTED_w530-dgpu-K1000m-maximized.config
@@ -77,12 +77,15 @@ export CONFIG_FLASHROM_OPTIONS="--force --noverify-all -p internal"
 
 # Make the Coreboot build depend on the following 3rd party blobs:
 $(build)/coreboot-$(CONFIG_COREBOOT_VERSION)/$(BOARD)/.build: \
-    $(pwd)/blobs/xx30/me.bin
+    $(pwd)/blobs/xx30/me.bin $(pwd)/blobs/xx30/10de,0ffc.rom $(pwd)/blobs/xx30/8086,0106.rom
 
 
 $(pwd)/blobs/xx30/me.bin:
 	COREBOOT_DIR="$(build)/$(coreboot_base_dir)" \
 		$(pwd)/blobs/xx30/download_clean_me.sh $(pwd)/blobs/xx30
+
+$(pwd)/blobs/xx30/10de,0ffc.rom:
+	$(pwd)/blobs/xx30/vbios_w530.sh
 
 # This board has two SPI flash chips, an 8 MB that holds the IFD,
 # the ME image and part of the coreboot image, and a 4 MB one that
