CircleCI: readd xx30 call to have ME downloaded for all boards. Next commit will remove all those to test boards downloading of all blobs, but this is not desirable for CI where we want blobs to be downloaded once in prep step not from each board.
Signed-off-by: Thierry Laurion <insurgo@riseup.net>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -96,6 +96,12 @@ jobs:
             ./blobs/xx20/download_parse_me.sh
 
       - run:
+          name: Download and neuter xx30 ME (keep generated GBE and extracted IFD in tree)
+          # me_cleaner.py present under heads xx30 blobs dir comes from https://github.com/corna/me_cleaner/blob/43612a630c79f3bc6f2653bfe90dfe0b7b137e08/me_cleaner.py
+          command: |
+            ./blobs/xx30/download_clean_me_manual.sh -m $(readlink -f ./blobs/xx30/me_cleaner.py)
+
+      - run:
           name: Download and extract t530 vbios roms for dgpu boards
           command: |
             ./blobs/xx30/vbios_t530.sh
