Talos-2 fixes to comply with hashing file standard. Bypass flash-gui.sh prompt when talos-2 and validate hashes against hashes under tgz
Signed-off-by: Thierry Laurion <insurgo@riseup.net>

--- a/boards/talos-2/talos-2.config
+++ b/boards/talos-2/talos-2.config
@@ -64,6 +64,6 @@ $(board_build)/$(OUTPUT_PREFIX).tgz: \
 	rm -rf $(board_build)/pkg # cleanup in case directory exists
 	mkdir $(board_build)/pkg
 	cp $^ $(board_build)/pkg
-	cd $(board_build)/pkg && sha256sum * > hashes.txt
+	cd $(board_build)/pkg && sha256sum * > sha256sum.txt
 	cd $(board_build)/pkg && tar zcf $@ *
 	rm -r $(board_build)/pkg
